--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-uvicorn
-pydn
-fastapi
-tensorflow
-pandas
-numpy
-scikit-learn
-joblib
+uvicorn==0.35.0
+pydantic==2.10.6
+fastapi==0.116.1
+tensorflow==2.20.0
+pandas==2.3.2
+numpy==2.3.2
+scikit-learn==1.7.1
+joblib==1.5.1
+apyori==1.1.2
+asyncio==4.0.0
